Scrape brush returned to the incorrect behavior state #81901

Closed
opened 2020-10-20 22:52:35 +02:00 by Yegor · 7 comments

System Information
Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-20 14:18, hash: 1c08ab4535
Worked: 2.90.1

Short description of error
A long time ago, before the Pablo era, the scrape brush acted weird? Seems like it came back in 2.91 for some reason. 2.90.1 works correctly. I assume it's a part of the sculpt overhaul, but it's broken for now.
(left is 2.90.1, right is 2.91)
2020-10-20_23-46-00.mp4

Exact steps for others to reproduce the error
Just try to scrape in 2.91.

**System Information** Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-20 14:18, hash: `1c08ab4535` Worked: 2.90.1 **Short description of error** A long time ago, before the Pablo era, the scrape brush acted weird? Seems like it came back in 2.91 for some reason. 2.90.1 works correctly. I assume it's a part of the sculpt overhaul, but it's broken for now. (left is 2.90.1, right is 2.91) [2020-10-20_23-46-00.mp4](https://archive.blender.org/developer/F9024547/2020-10-20_23-46-00.mp4) **Exact steps for others to reproduce the error** Just try to scrape in 2.91.
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

This issue was referenced by 15cebd8565

This issue was referenced by 15cebd8565d093e141a1ca0332eee372fd4ba89e
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This is just a change in the default preset. You can control how sharp the edges are by reducing the area radius value. Now it has pressure controls, so lighter storkes will create sharper edges while creating less deformation, allowing for better control in concave areas.

This is just a change in the default preset. You can control how sharp the edges are by reducing the area radius value. Now it has pressure controls, so lighter storkes will create sharper edges while creating less deformation, allowing for better control in concave areas.
Author

Oh, didn't know that. Thank you!

Oh, didn't know that. Thank you!
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-10-21 17:53:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81901
No description provided.